--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.25.0
-pandas==2.0.3
-plotly==5.17.0
-statsmodels==0.14.0
-seaborn==0.13.0
-matplotlib==3.8.0
+streamlit
+pandas
+plotly
+statsmodels
+seaborn
+matplotlib
